[package]
name = "my_encryption_lib"
version = "0.1.0"
authors = 0xenj
edition = "2021"
description = "A library for various encryption and decryption algorithms."
repository = "https://github.com/0xenj/my_encryption_lib"
license = "MIT"
readme = "README.md"
keywords = ["encryption", "security", "cryptography", "decryption", "rust"]
categories = ["cryptography", "security-tools", "algorithms"]

[dependencies]

[lib]
name = "my_encryption_lib"
path = "src/lib.rs"
